--- a/app/coleta.html
+++ b/app/coleta.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pontos de Coleta</title>
-    <link rel="stylesheet" href="coleta.css">
+    <link rel="stylesheet" href="css/coleta.css">
 </head>
 
 <body>
