--- a/app/home.html
+++ b/app/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recicla Aí</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <a href="sobre.html">Sobre</a>
         <a href="coleta.html">Pontos de Coleta</a>
         <a href="contato.html">Contato</a>
-        <a href="cadastro.html">Cadastre-se</a>
+        <a href="c.html" target="_blank" >Cadastre-se</a>
     </nav>
 
     <main>
