menu a todas as telas

--- a/app/c.html
+++ b/app/c.html
@@ -4,60 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <style>
-        body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f1f9fc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 90%;
-            max-width: 400px;
-            text-align: center;
-        }
-        h2 {
-            color: #2d7d2d;
-            font-size: 2rem;
-        }
-        input {
-            width: 90%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1.2rem;
-        }
-        button {
-            background: #2d7d2d;
-            color: white;
-            border: none;
-            padding: 10px;
-            width: 100%;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1.2rem;
-        }
-        button:hover {
-            background: #256b25;
-        }
-        @media (max-width: 600px) {
-            .container {
-                width: 95%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/c.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Cadastro</h2>
+    <nav>
+        <img src="logo_header2.svg" alt="recicla aí logo">
+         <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li> <a href="coleta.html">Pontos de Coleta</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="c.html" target="_blank" >Cadastre-se</a></li>
+         </ul>
+    </nav>
+
+    <section >
+        <div class="container">
+            <h2>Cadastro</h2>
         <form>
             <input type="text" placeholder="Nome completo" required>
             <input type="email" placeholder="E-mail" required>
@@ -65,6 +27,10 @@
             <input type="text" placeholder="Cidade/Bairro" required>
             <button type="submit">Cadastrar como Usuário</button>
         </form>
-    </div>
+        <a href="#">Cadastrar como empresa</a>
+
+        </div>
+        
+    </section>
 </body>
 </html>
