--- a/app/cadastro.html
+++ b/app/cadastro.html
@@ -18,7 +18,8 @@
         <a href="home.html">Home</a>
         <a href="sobre.html">Sobre</a>
         <a href="coleta.html">Pontos de Coleta</a>
-        <a href="contato.html">Contato</a>
+        <!-- <a href="contato.html">Contato</a> -->
+        <li><a href="c.html" target="_blank" >Cadastre-se</a></li>
     </nav>
 
     <main>
