--- a/app/coleta.html
+++ b/app/coleta.html
@@ -9,17 +9,21 @@
 </head>
 
 <body>
+    <nav>
+        <img src="logo_header2.svg" alt="recicla aí logo">
+         <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li> <a href="coleta.html">Pontos de Coleta</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="c.html" target="_blank" >Cadastre-se</a></li>
+         </ul>
+         
+    </nav>
     <header>
         <link rel="reciclaai icon" type="imagex/png" href="logo_icon.ico">
         <img src="logo_header2.svg" alt="recicla aí logo">
-        <h1>Encontre Pontos de Coleta</h1>
+        <h1>Transformando resíduos em oportunidades!</h1>
     </header>
-    <nav>
-        <a href="home.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="contato.html">Contato</a>
-        <a href="cadastro.html">Cadastre-se</a>
-    </nav>
 
     <main>
         <section class="section">
